--- a/views/articles/show.ejs
+++ b/views/articles/show.ejs
@@ -32,7 +32,7 @@
     
     <p class="article-conclusion" ><%= article.conclusions %></p>
 
-    <% if (currentUser && currentUser.username === 'admin') { %>
+    <% if (currentUser && currentUser.username === 'admin' || currentUser.username === user.username) { %>
         <div>
             <a href="/articles/<%= article.id %>/edit">
             <button class="btn btn-light mt-2">Edit</button>
