--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -99,18 +99,29 @@
 				</div>
 				<div class="uk-width-1-1">
 					<div class="uk-card uk-card-default uk-card-body">
-						<% if (currentUser && currentUser.username === 'admin') { %>
+						<% if (currentUser && currentUser.isTeamMember === true) { %>
 							
 								<h4>Добавить контент:</h4>
 								<ul class="uk-nav-sub">
-									<li><a href="/projects/new">Добавить объект</a></li>
 									<li><a href="/articles/new">Добавить новость</a></li>
 									<li><a href="/guides/new">Добавить гид по городам</a></li>
 								</ul>
 							
-							<% } %>
+						<% } %>
+						<% if (currentUser && currentUser.username === 'admin') { %>
+							
+							<h4>Добавить контент:</h4>
+							<ul class="uk-nav-sub">
+								<li><a href="/projects/new">Добавить объект</a></li>
+								<li><a href="/articles/new">Добавить новость</a></li>
+								<li><a href="/guides/new">Добавить гид по городам</a></li>
+								<li><a href="/register">Добавить нового члена команды</a></li>
+							</ul>
+						
+					<% } %>
 					</div>
 				</div>
+				
 			</div>
 		</div>
 	</main>
