--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -3,6 +3,12 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <link rel="preload" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"></noscript>
+    <!-- UIkit CSS -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/css/uikit.min.css" />
+
+	<!-- UIkit JS -->
+	<script src="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/js/uikit.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/js/uikit-icons.min.js"></script>
 </head>
 <nav>
     <ul class="menu">
@@ -12,7 +18,29 @@
         <li class="item"><a href="/projects">Каталог</a></li>
         <li class="item"><a href="/articles">Статьи</a></li>
         <li class="item"><a href="/guides">Гид по городам</a></li>
-        <li class="item"><a href="#/about-us">О нас</a></li>
+       
+        <li class="item">
+            <a href="javascript:;" >
+                О нас <span uk-icon="icon: chevron-down; ratio: 1.2"></span>
+            </a>
+        </li>
+        <div uk-dropdown="pos: bottom-justify; animation: uk-animation-slide-top-small; duration: 400">
+            <ul class="uk-nav uk-dropdown-nav">
+                <li class="item-simple">
+                    <a href="/about"><span class="uk-margin-small-right" uk-icon="icon: check; ratio: 1.2"></span>Цель</a>
+                </li>
+                <li class="item-simple">
+                    <a href="/about/history"><span class="uk-margin-small-right" uk-icon="icon: clock; ratio: 1.2"></span>История</a>
+                </li>
+                <li class="item-simple">
+                    <a href="/about/team"><span class="uk-margin-small-right" uk-icon="icon: happy; ratio: 1.2"></span>Команда</a>
+                </li>
+                <li class="item-simple">
+                
+                    <a href="/about/press"><span class="uk-margin-small-right" uk-icon="icon:  file-text; ratio: 1.2"></span>В прессе</a>
+                </li>
+            </ul>
+        </div>
         <li class="item"><a href="/contacts">Контакты</a></li>
         <li class="item mobile"><a href="tel:+380631187452">+38 063 118 74 52</a></li>
         <li class="item icons">
