--- a/public/stylesheets/contacts.css
+++ b/public/stylesheets/contacts.css
@@ -76,7 +76,7 @@
     .contact-main-info {
         font-size: 65.6106px;
         line-height: 114.9%;
-        
+        font-weight: 700;
     }
 
     .contacts-title {
