--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -61,7 +61,7 @@
             </li>
             
         <% } %>
-        <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
+        <li class="toggle"><a href="javascript:;"><i class="fas fa-bars"></i></a></li>
     </ul>
 </nav>
 
