--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -116,6 +116,7 @@
 								<li><a href="/articles/new">Добавить новость</a></li>
 								<li><a href="/guides/new">Добавить гид по городам</a></li>
 								<li><a href="/register">Добавить нового члена команды</a></li>
+								<li><a href="/about/new-goals">Добавить о нас цели </a></li>
 							</ul>
 						
 					<% } %>
