--- a/public/stylesheets/circles.css
+++ b/public/stylesheets/circles.css
@@ -73,6 +73,15 @@
 	top:-65%;
 }
 
+.shape-white-about-goals {
+	background-image: url('../images/white-circles-about-goals.svg') ;
+	background-size: cover;
+	width: 100%;
+	height: 100%;
+	min-height: 1800px;
+	position: absolute;
+}
+
 
 
 
@@ -107,6 +116,9 @@
 	.shape-white-catalog {
 		display: none;
 	}
+	.shape-white-about-goals {
+		min-height: 900px;
+	}
 }
 
 .shape-blue {
@@ -139,6 +151,10 @@
 	.shape-orange-about {
 		max-width: 90%;
 		height: 100%;	
+	}
+	.shape-white-about-goals {
+		min-height: 200px;
+		background-position: center;
 	}
 }
 
