--- a/views/about/history.ejs
+++ b/views/about/history.ejs
@@ -1,6 +1,7 @@
 <% layout('layouts/boilerplate') -%>
 <head>
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 
