edit about us goals

--- a/public/stylesheets/about-us-goals.css
+++ b/public/stylesheets/about-us-goals.css
@@ -87,6 +87,33 @@
     color:#4B535F;
 }
 
+.button-show {
+    background: #FFFFFF;
+    border-radius: 5px;
+    padding: 16px 24px;
+    color: #5570BA;
+    text-decoration: none;
+    display: inline-block;
+    position: relative;
+    max-width: 400px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    text-transform: uppercase;
+    cursor: pointer;
+    outline: none;
+    border: none;
+    margin:16px 0;
+}
+
+.button-show:hover {
+    box-shadow: 0 4px 8px 0 #5570BA;
+    moz-transition: all .5s ease-in-out;
+    -o-transition: all .5s ease-in-out;
+    -webkit-transition: all .5s ease-in-out;
+    transition: all .5s ease-in-out;
+}
+
 
 @media (max-width: 1600px) {
     .wrapper-about  {
