--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -78,7 +78,14 @@ ul {
     padding:4px;
 }
 
-
+.menu .uk-dropdown {
+    box-shadow: 0px 0px 60px rgba(0, 0, 0, 0.05) !important;
+    border-radius: 3px;
+    text-align: center;
+    top:56px !important;
+    margin-top:20px !important;
+    width:260px !important;
+}
 
 
 .item a:hover {
