--- a/views/about/history.ejs
+++ b/views/about/history.ejs
@@ -2,12 +2,32 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel='stylesheet' href='/stylesheets/about-us-history.css' />
 </head>
 
 
 
 
 
-<div class="wrapper-articles">
-   <div>about history</div>
+<div class="wrapper-history">
+    <h3 class="title-about ">История</h3>
+    <div class="timeline">
+        <div class="container-wrapper">
+            <div class="container data">
+                <i class="icon fa fa-home"></i>
+                <div class="date">15.12.2020</div>
+                <div class="content">
+                  <h2 class="content-date">Lorem ipsum dolor sit amet</h2>
+                  <p class="content-text">
+                    Lorem ipsum dolor sit amet elit.
+                  </p>
+                </div>
+            </div>
+            <div class="container image">
+                <img src="./../images/timesTemp.png" alt="">
+            </div>
+        </div>
+        
+       
+    </div>   
 </div>
