--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -117,6 +117,7 @@
 								<li><a href="/guides/new">Добавить гид по городам</a></li>
 								<li><a href="/register">Добавить нового члена команды</a></li>
 								<li><a href="/about/new-goals">Добавить о нас цели </a></li>
+								<li><a href="/about/new-history">Добавить о нас история </a></li>
 							</ul>
 						
 					<% } %>
