--- a/public/stylesheets/about-us-history.css
+++ b/public/stylesheets/about-us-history.css
@@ -29,8 +29,8 @@ body {
   width: 100%;
   max-width: 1140px;
   margin: 0 auto;
-  padding: 15px 0;
-  margin-top:64px;
+  padding: 32px 0;
+  
 }
 
 .timeline::after {
@@ -131,7 +131,32 @@ body {
 }
 
 
+.button-show {
+  background: #FFFFFF;
+  border-radius: 5px;
+  padding: 16px 24px;
+  color: #5570BA;
+  text-decoration: none;
+  display: inline-block;
+  position: relative;
+  max-width: 400px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  text-transform: uppercase;
+  cursor: pointer;
+  outline: none;
+  border: none;
+  margin:16px 0;
+}
 
+.button-show:hover {
+  box-shadow: 0 4px 8px 0 #5570BA;
+  moz-transition: all .5s ease-in-out;
+  -o-transition: all .5s ease-in-out;
+  -webkit-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
+}
 
 
 @media (max-width: 767.98px) {
