--- a/views/404.ejs
+++ b/views/404.ejs
@@ -7,7 +7,7 @@
 <div class="wrapper-not-found">
     <div class="notfound-bg"></div>
     <h2 class="not-found-title">Запрашиваемая страница не существует!</h2>
-    <img src="/images/image-404.svg" alt="not-found-image">
+    <img class="not-found-image" src="/images/image-404.svg" alt="not-found-image">
 </div>
 
 
