--- a/views/about/about.ejs
+++ b/views/about/about.ejs
@@ -35,7 +35,7 @@
         <% if (currentUser && currentUser.username === 'admin') { %>
             <div>
                 <a href="/about/edit-goals">
-                    <button class="button-show">Изменить объект</button>
+                    <button class="button-show">Изменить данные</button>
                 </a> 
             </div> 
         <% } %>
