--- a/public/stylesheets/about-us-history.css
+++ b/public/stylesheets/about-us-history.css
@@ -158,6 +158,24 @@ body {
   transition: all .5s ease-in-out;
 }
 
+.card-wrapper {
+  position: relative;
+  transition: all .2s ease-in-out; 
+}
+
+
+figure {
+  margin:0;
+}
+
+.title-image {
+  max-width:470px;
+  max-height: 300px;
+  width:100%;
+  height:auto;
+  object-fit: contain;   
+}
+
 
 @media (max-width: 767.98px) {
   .timeline::after {
