--- a/views/about/edit-goals.ejs
+++ b/views/about/edit-goals.ejs
@@ -43,15 +43,14 @@
 		<div >
 			<div >
 				<p class="uk-text-bolder uk-margin-top">Предоставляемые услуги:</p>
+				<% aboutGoal.services.forEach(function(service, i) { %>
+					<input type="text" class="uk-input uk-width-1-3" name="services" placeholder="Данные" value="<%= service %>">
+				<% }) %>
 				<input type="text" class="uk-input uk-width-1-3" name="services" placeholder="Данные" >
 				<input type="text" class="uk-input uk-width-1-3" name="services" placeholder="Данные" >
 				<input type="text" class="uk-input uk-width-1-3" name="services" placeholder="Данные" >
 				<input type="text" class="uk-input uk-width-1-3" name="services" placeholder="Данные" >
 				<input type="text" class="uk-input uk-width-1-3" name="services" placeholder="Данные" >
-                <input type="text" class="uk-input uk-width-1-3" name="services" placeholder="Данные" >
-                <input type="text" class="uk-input uk-width-1-3" name="services" placeholder="Данные" >
-                <input type="text" class="uk-input uk-width-1-3" name="services" placeholder="Данные" >
-                <input type="text" class="uk-input uk-width-1-3" name="services" placeholder="Данные" >
 			</div>	
 		</div>
 		
@@ -71,6 +70,6 @@
 			<input type="submit" class="uk-button uk-button-secondary uk-margin">	
 		</div>
 	
-		
+		<p><%= aboutGoal %></p>
 	</form>
 </div>
