--- a/views/about/edit-history.ejs
+++ b/views/about/edit-history.ejs
@@ -23,16 +23,25 @@
 			<h4>Временные точки:</h4>
             <div>
 				<p class="uk-text-bolder uk-margin-top">Текст точки:</p>
-				<textarea name="body" placeholder="Текст гида" class="uk-textarea uk-width-1-3" rows="4"><%= point.textPoint %></textarea>
-			</div>	
+				<textarea name="textPoint" placeholder="Текст гида" class="uk-textarea uk-width-1-3" rows="4"><%= point.textPoint %></textarea>
+			</div>
+			
 			<div class="card m-1" style="width: 18rem;">
+
 				<p class="uk-text-bolder uk-margin-top">Картинка точки:</p>
                 <img class="card-img-top" src="<%= point.pointImage[0].url %>"/>
                 <div class="card-body">
                     <label for="image<%= i %>">Delete?</label>
                     <input type="checkbox" class="imageDeleteCheckbox" name="deleteImages[]" id="image<%= i %>" value="<%= point.pointImage[0].public_id %>">
                 </div>
-            </div>	
+			</div>
+		
+			<div class="uk-margin">
+				<div uk-form-custom>
+					<input type="file" accept="images/*" name="timesTempImage" id="inputGroupFile01" multiple>
+					<button class="uk-button uk-button-default" type="button" tabindex="-1">Загрузить</button>
+				</div>
+			</div>
         <% }) %>
        
         <input type="submit" class="uk-button uk-button-secondary uk-margin">	
