--- a/views/about/history.ejs
+++ b/views/about/history.ejs
@@ -16,7 +16,7 @@
         <div class="timeline">
             <div class="container-wrapper">
                 <div class="container data">
-                    <i class="icon fa fa-home"></i>
+                    <i class="icon  <%= point.icon %>"></i>
                     <div class="date"><%= point.date.toLocaleDateString('ru-RU') %></div>
                     <div class="content">
                       <h2 class="content-date"></h2>
