--- a/views/register.ejs
+++ b/views/register.ejs
@@ -55,9 +55,10 @@
                                         </div>
                                         <div class="uk-margin">
                                             <select class="uk-select" name="department">
-                                                <option value="SalesDep" >Отдел продаж</option>
-                                                <option value="PartnersDep" >Партнерский отдел</option>
-                                                <option value="TechDept" >Технический отдел</option>
+                                                <option value="Отдел по работе с клиентами" >Отдел продаж</option>
+                                                <option value="Отдел по работе с партнерами" >Партнерский отдел</option>
+                                                <option value="Редакция сайта" >Технический отдел</option>
+                                                <option value="CEO" >CEO</option>
                                             </select>
                                         </div>
                                         <div class="uk-margin">
