--- a/views/about/edit-history.ejs
+++ b/views/about/edit-history.ejs
@@ -42,6 +42,19 @@
 					<button class="uk-button uk-button-default" type="button" tabindex="-1">Загрузить</button>
 				</div>
 			</div>
+			<div >
+				<div >
+					<p class="uk-text-bolder uk-margin-top">Дата:</p>
+					<input type="date" class="uk-input uk-width-1-3" name="date" value="<%= point.date.toISOString().split('T')[0] %>">
+				</div>	
+			</div>
+			<div >
+				<div >
+					<p class="uk-text-bolder uk-margin-top">Иконка:</p>
+					<input type="text" class="uk-input uk-width-1-3" name="icon" value="<%= point.icon %>">
+				</div>	
+			</div>
+			
         <% }) %>
        
         <input type="submit" class="uk-button uk-button-secondary uk-margin">	
