--- a/views/about/new-history.ejs
+++ b/views/about/new-history.ejs
@@ -45,6 +45,12 @@
 				<input type="text" class="uk-input uk-width-1-3" name="subhead" placeholder="Название" >
 			</div>	
 		</div>
+		<div >
+			<div >
+				<p class="uk-text-bolder uk-margin-top">Название иконки:</p>
+				<input type="text" class="uk-input uk-width-1-3" name="icon" placeholder="Иконка" >
+			</div>	
+		</div>
 		<div>
 			<div>
 				<p class="uk-text-bolder uk-margin-top">Текст статьи:</p>
