--- a/public/stylesheets/about-us-team.css
+++ b/public/stylesheets/about-us-team.css
@@ -160,7 +160,7 @@ figure {
     }
 
     .card-wrapper {
-        width:100%;
+        width:288px;
     }
     .member-name {
         font-size: 24px;
