--- a/public/stylesheets/about-us-history.css
+++ b/public/stylesheets/about-us-history.css
@@ -128,6 +128,8 @@ body {
   line-height: 54px;
   letter-spacing: 0.0033em;
   color: #4B535F;
+  margin-top:-32px;
+  transition: all .5s ease-in-out;
 }
 
 
@@ -176,7 +178,14 @@ figure {
   object-fit: contain;   
 }
 
-
+@media (max-width: 1024px) {
+  .content-text {
+    margin-top:48px;
+  }
+  .timeline {
+    padding: 16px 0;    
+  }
+}
 @media (max-width: 767.98px) {
   .timeline::after {
     left: 90px;
@@ -215,10 +224,12 @@ figure {
   .content-text {
     font-size: 24px;
     line-height: 28px;
+    margin-top:0;
   }
 
   .container.data .date {
     right: 10px;
+    
     border-radius: 16px ;
   }
   
@@ -228,7 +239,12 @@ figure {
   }
   
 }
-
+@media (max-width: 576px) {
+  .content-text {
+    width:160px;
+    margin-top:-16px;
+  }
+}
 @media (max-width: 1600px) {
   .wrapper-history  {
       max-width:1535px;
