--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -24,7 +24,7 @@
                 О нас <span uk-icon="icon: chevron-down; ratio: 1.2"></span>
             </a>
         </li>
-        <div uk-dropdown="pos: bottom-justify; animation: uk-animation-slide-top-small; duration: 400">
+        <div uk-dropdown="pos: bottom-center; animation: uk-animation-slide-top-small; duration: 400">
             <ul class="uk-nav uk-dropdown-nav">
                 <li class="item-simple">
                     <a href="/about"><span class="uk-margin-small-right" uk-icon="icon: check; ratio: 1.2"></span>Цель</a>
