--- a/views/partials/searchArticles.ejs
+++ b/views/partials/searchArticles.ejs
@@ -1,7 +1,10 @@
 <head>
     <link rel='stylesheet' href='/stylesheets/search-article.css' />
-    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
-    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+    
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    
+    
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </head>
 <div class="search-filter">
     <h1 class="title-text">Статьи</h1>
