--- a/views/projects/show.ejs
+++ b/views/projects/show.ejs
@@ -2,8 +2,8 @@
 
 <head>
     <link rel='stylesheet' href='/stylesheets/lightbox.css' />
-    <link async rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
-    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </head>
 
 <div class="content-project-wrapper">
