--- a/public/stylesheets/article-index.css
+++ b/public/stylesheets/article-index.css
@@ -114,8 +114,15 @@
     .content-wrapper {
         margin-top:32px;
         height: auto;
-        flex: 0 0 75%;
-        max-width: 75%;
+        flex: 0 0 85%;
+        max-width: 85%;
        
+    }
+
+    .article-image {
+        object-fit: cover;
+        max-width:485px;
+        width:100%;
+        max-height:280px;  
     }
 }
