--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="/stylesheets/index-second-section.css">
     <link rel="stylesheet" href='/stylesheets/circles.css'>
     <link href='/stylesheets/index.css' rel='stylesheet'> 
-    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
-   
-    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+    
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </head>
 <div class="main-section">
     <div class="shape-orange"></div>
